<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/imagen1">
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/titulo"
            android:textSize="30dp"
            android:layout_gravity="center"/>

        </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/quices"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/digite"
            android:inputType="numberDecimal"
            android:textSize="30dp"
            android:layout_weight="1"
            android:id="@+id/eQuices"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/exposiciones"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/digite"
            android:inputType="numberDecimal"
            android:textSize="30dp"
            android:layout_weight="1"
            android:id="@+id/eExpo"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/laboratorio"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/digite"
            android:inputType="numberDecimal"
            android:textSize="30dp"
            android:layout_weight="1"
            android:id="@+id/eLab"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/proyecto"
            android:gravity="center"
            android:textSize="30dp"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:hint="@string/digite"
            android:inputType="numberDecimal"
            android:textSize="30dp"
            android:layout_weight="1"
            android:id="@+id/eProyec"/>
    </LinearLayout>
    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/button"
        android:layout_gravity="center"
        android:textSize="30dp"
        android:id="@+id/boton"
        />
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/notafinal"
            android:gravity="center"
            android:textAppearance="@style/textViewStyle"
            android:textSize="30dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textSize="30dp"
            android:layout_weight="1"
            android:id="@+id/tNotaFinal"/>
    </LinearLayout>



    </LinearLayout>
